functions/firebase-debug.log
[debug] [2019-08-13T07:05:17.436Z] ----------------------------------------------------------------------
[debug] [2019-08-13T07:05:17.438Z] Command:       /usr/local/bin/node /usr/local/bin/firebase functions:shell
[debug] [2019-08-13T07:05:17.438Z] CLI Version:   7.2.1
[debug] [2019-08-13T07:05:17.438Z] Platform:      linux
[debug] [2019-08-13T07:05:17.438Z] Node Version:  v10.16.0
[debug] [2019-08-13T07:05:17.438Z] Time:          Tue Aug 13 2019 14:05:17 GMT+0700 (Indochina Time)
[debug] [2019-08-13T07:05:17.438Z] ----------------------------------------------------------------------
[debug] 
[debug] [2019-08-13T07:05:17.442Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2019-08-13T07:05:17.442Z] > authorizing via signed-in user
[debug] [2019-08-13T07:05:17.442Z] [iam] checking project my-project-e122f for permissions ["firebase.projects.get"]
[debug] [2019-08-13T07:05:17.443Z] > refreshing access token with scopes: ["email","https://www.googleapis.com/auth/cloud-platform","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","openid"]
[debug] [2019-08-13T07:05:17.443Z] >>> HTTP REQUEST POST https://www.googleapis.com/oauth2/v3/token  
 <request body omitted>
[debug] [2019-08-13T07:05:17.670Z] <<< HTTP RESPONSE 200
[debug] [2019-08-13T07:05:17.685Z] >>> HTTP REQUEST POST https://cloudresourcemanager.googleapis.com/v1/projects/my-project-e122f:testIamPermissions  

[debug] [2019-08-13T07:05:19.055Z] <<< HTTP RESPONSE 200
[warn] ⚠  Your requested "node" version "8" doesn't match your global version "10"
[debug] [2019-08-13T07:05:19.066Z] >>> HTTP REQUEST GET https://firebase.googleapis.com/v1beta1/projects/my-project-e122f/adminSdkConfig  
 
[debug] [2019-08-13T07:05:19.469Z] <<< HTTP RESPONSE 200
[info] ✔  functions: Emulator started at http://localhost:5000
[debug] [2019-08-13T07:05:19.732Z] [functions] Watching "/home/twin/Downloads/firestore-test/functions" for Cloud Functions...
[debug] [2019-08-13T07:05:19.956Z] DEBUG: [runtime-status] Functions runtime initialized. {"cwd":"/home/twin/Downloads/firestore-test/functions","node_version":"10.16.0"}
[debug] [2019-08-13T07:05:19.956Z] DEBUG: [runtime-status] Disabled runtime features: {"functions_config_helper":true,"network_filtering":true,"timeout":true,"memory_limiting":true,"protect_env":true,"admin_stubs":true} {}
[debug] [2019-08-13T07:05:19.959Z] DEBUG: [runtime-status] Resolved module firebase-admin {"declared":true,"installed":true,"version":"8.3.0","resolution":"/home/twin/Downloads/firestore-test/functions/node_modules/firebase-admin/lib/index.js"}
[debug] [2019-08-13T07:05:19.959Z] DEBUG: [runtime-status] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.2.0","resolution":"/home/twin/Downloads/firestore-test/functions/node_modules/firebase-functions/lib/index.js"}
[debug] [2019-08-13T07:05:19.960Z] DEBUG: [runtime-status] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.2.0","resolution":"/home/twin/Downloads/firestore-test/functions/node_modules/firebase-functions/lib/index.js"}
[warn] ⚠  /home/twin/Downloads/firestore-test/functions/index.js:160
const bucket = gcs.bucket(bucketName);
      ^

SyntaxError: Identifier 'bucket' has already been declared
    at Module._compile (internal/modules/cjs/loader.js:721:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:787:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:690:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at /usr/local/lib/node_modules/firebase-tools/lib/emulator/functionsEmulatorRuntime.js:663:33
    at Generator.next (<anonymous>)
    at fulfilled (/usr/local/lib/node_modules/firebase-tools/lib/emulator/functionsEmulatorRuntime.js:4:58)
[warn] ⚠  We were unable to load your functions code. (see above)
[debug] [2019-08-13T07:05:57.101Z] ----------------------------------------------------------------------
[debug] [2019-08-13T07:05:57.103Z] Command:       /usr/local/bin/node /usr/local/bin/firebase functions:shell
[debug] [2019-08-13T07:05:57.103Z] CLI Version:   7.2.1
[debug] [2019-08-13T07:05:57.103Z] Platform:      linux
[debug] [2019-08-13T07:05:57.103Z] Node Version:  v10.16.0
[debug] [2019-08-13T07:05:57.103Z] Time:          Tue Aug 13 2019 14:05:57 GMT+0700 (Indochina Time)
[debug] [2019-08-13T07:05:57.103Z] ----------------------------------------------------------------------
[debug] 
[debug] [2019-08-13T07:05:57.107Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2019-08-13T07:05:57.107Z] > authorizing via signed-in user
[debug] [2019-08-13T07:05:57.107Z] [iam] checking project my-project-e122f for permissions ["firebase.projects.get"]
[debug] [2019-08-13T07:05:57.108Z] >>> HTTP REQUEST POST https://cloudresourcemanager.googleapis.com/v1/projects/my-project-e122f:testIamPermissions  

[debug] [2019-08-13T07:05:58.452Z] <<< HTTP RESPONSE 200
[warn] ⚠  Your requested "node" version "8" doesn't match your global version "10"
[debug] [2019-08-13T07:05:58.465Z] >>> HTTP REQUEST GET https://firebase.googleapis.com/v1beta1/projects/my-project-e122f/adminSdkConfig  
 
[debug] [2019-08-13T07:05:59.363Z] <<< HTTP RESPONSE 200
[info] ✔  functions: Emulator started at http://localhost:5000
[debug] [2019-08-13T07:05:59.636Z] [functions] Watching "/home/twin/Downloads/firestore-test/functions" for Cloud Functions...
[debug] [2019-08-13T07:05:59.846Z] DEBUG: [runtime-status] Functions runtime initialized. {"cwd":"/home/twin/Downloads/firestore-test/functions","node_version":"10.16.0"}
[debug] [2019-08-13T07:05:59.846Z] DEBUG: [runtime-status] Disabled runtime features: {"functions_config_helper":true,"network_filtering":true,"timeout":true,"memory_limiting":true,"protect_env":true,"admin_stubs":true} {}
[debug] [2019-08-13T07:05:59.849Z] DEBUG: [runtime-status] Resolved module firebase-admin {"declared":true,"installed":true,"version":"8.3.0","resolution":"/home/twin/Downloads/firestore-test/functions/node_modules/firebase-admin/lib/index.js"}
[debug] [2019-08-13T07:05:59.849Z] DEBUG: [runtime-status] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.2.0","resolution":"/home/twin/Downloads/firestore-test/functions/node_modules/firebase-functions/lib/index.js"}
[debug] [2019-08-13T07:05:59.850Z] DEBUG: [runtime-status] Resolved module firebase-functions {"declared":true,"installed":true,"version":"3.2.0","resolution":"/home/twin/Downloads/firestore-test/functions/node_modules/firebase-functions/lib/index.js"}
[warn] ⚠  TypeError: mime.lookup is not a function
    at Object.<anonymous> (/home/twin/Downloads/firestore-test/functions/index.js:164:23)
    at Module._compile (internal/modules/cjs/loader.js:776:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:787:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:690:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at /usr/local/lib/node_modules/firebase-tools/lib/emulator/functionsEmulatorRuntime.js:663:33
    at Generator.next (<anonymous>)
[warn] ⚠  We were unable to load your functions code. (see above)
[info] >  backend run port 8085
